--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -46,7 +46,7 @@ textarea {
 
 // ===== Locale Switcher =====
 .locale-switcher {
-  margin: 20px 0;
+  margin: 0 20px 0 0;
   text-align: right;
 
   ul {
