--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -27,6 +27,40 @@ textarea {
   color: green;
 }
 
+.notice-message {
+  color: #155724;
+  background-color: #d4edda;
+  border: 1px solid #c3e6cb;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.error-message {
+  color: #721c24;
+  background-color: #f8d7da;
+  border: 1px solid #f5c6cb;
+  padding: 15px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+
+  h2 {
+    margin-top: 0;
+    font-size: 1.2em;
+  }
+
+  ul {
+    margin: 0;
+    padding-left: 20px;
+
+    li {
+      margin-bottom: 5px;
+    }
+  }
+}
+
+
 // ===== Header / Logo =====
 #logo {
   float: left;
@@ -46,7 +80,7 @@ textarea {
 
 // ===== Locale Switcher =====
 .locale-switcher {
-  margin: 20px 0;
+  margin: 0 20px 0 0;
   text-align: right;
 
   ul {
