--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,30 @@
-<% if notice %>
-  <p class="notice"><%= notice %></p>
+<% if notice.present? %>
+  <p class="notice-message"><%= notice %></p>
 <% end %>
 
-<h1><%= t("products.index.title") %></h1>
+<% content_for :title, t("products.index.title") %>
 
-<div id="products">
-  <%= render partial: "product", collection: @products %>
-</div>
+<h1><%= t(".title") %></h1>
 
-<%= link_to t("products.new_product"), new_product_path %>
+<table>
+  <thead>
+    <tr>
+      <th><%= t(".name") %></th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% if @products.present? %>
+      <%= render @products %>
+    <% else %>
+      <tr>
+        <td colspan="4"><%= t(".empty") %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to t(".new"), new_product_path %>
