--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,9 +1,14 @@
-<div id="<%= dom_id product %>">
-  <p>
-      <strong><%= t("products.attributes.name") %>:</strong>
-    <%= product.name %>
-  </p>
-  <p>
-    <%= link_to t("products.show_product"), product_path(product) %>
-  </p>
-</div>
+<tr>
+  <td><%= product.name %></td>
+  <td>
+    <%= link_to t("products.actions.show"), product %>
+  </td>
+  <td>
+    <%= link_to t("products.actions.edit"), edit_product_path(product) %>
+  </td>
+  <td>
+    <%= link_to t("products.actions.destroy"), product,
+                method: :delete,
+                data: { confirm: t("products.actions.confirm_destroy") } %>
+  </td>
+</tr>
