--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,9 +1,9 @@
-<h1><%= t("products.new_product") %></h1>
+<h1><%= t(".title") %></h1>
 
 <%= render "form", product: @product %>
 
 <br>
 
 <div>
-  <%= link_to t("products.back_to_products"), products_path %>
+  <%= link_to t(".back"), products_path %>
 </div>
