--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,14 +1,10 @@
-<<<<<<< HEAD
-<h1><%= t("products.editing_product") %></h1>
-=======
-<h1>Editing product</h1>
->>>>>>> 28f4749 (chapter_3_4_5)
+<h1><%= t(".title") %></h1>
 
 <%= render "form", product: @product %>
 
 <br>
 
 <div>
-  <%= link_to t("products.show_product"), @product %> |
-  <%= link_to t("products.back_to_products"), products_path %>
+  <%= link_to t(".show"), @product %> |
+  <%= link_to t(".back"), products_path %>
 </div>
