--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,13 +1,9 @@
-<<<<<<< HEAD
-<h1><%= t("products.new_product") %></h1>
-=======
-<h1>New product</h1>
->>>>>>> 28f4749 (chapter_3_4_5)
+<h1><%= t(".title") %></h1>
 
 <%= render "form", product: @product %>
 
 <br>
 
 <div>
-  <%= link_to t("products.back_to_products"), products_path %>
+  <%= link_to t(".back"), products_path %>
 </div>
