--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><%= link_to t("navbar.home"), root_path %></li>
                 <li><%= link_to t("navbar.help"), help_path %></li>
+                <li><%= link_to t("navbar.sign_up"), signup_path %></li>
                 <li><%= link_to t("navbar.login"), "#"%></li>
             </ul>
         </nav>
