--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,22 +4,31 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for @user do |f| %>
+    <%= form_with(model: @user, local: true) do |f| %>
       <%= render "shared/error_messages" %>
 
       <%= f.label :name, t("activerecord.attributes.user.name") %>
       <%= f.text_field :name %>
 
-      <%= f.label :email %>
+      <%= f.label :email, t("activerecord.attributes.user.email") %>
       <%= f.email_field :email %>
 
-      <%= f.label :password %>
+      <%= f.label :birthday, t("activerecord.attributes.user.birthday") %>
+      <%= f.date_field :birthday, class: "form-control" %>
+
+      <%= f.label :gender, t("activerecord.attributes.user.gender") %>
+      <%= f.select :gender,
+            User.genders.keys.map { |g| [t("gender.#{g}"), g] },
+            prompt: t("views.users.new.select_gender"),
+            class: "form-control" %>
+
+      <%= f.label :password, t("activerecord.attributes.user.password") %>
       <%= f.password_field :password %>
 
-      <%= f.label :password_confirmation %>
+      <%= f.label :password_confirmation, t("activerecord.attributes.user.password_confirmation") %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.submit t("helpers.submit.user.create"), class: "btn btn-primary" %>
+      <%= f.submit t(".create_account"), class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
