--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -89,7 +89,7 @@ h1 {
 
 // ===== Locale Switcher =====
 .locale-switcher {
-  margin: 0 20px 0 0;
+  margin: 0 0 0 0;
   text-align: right;
 
   ul {
@@ -169,4 +169,8 @@ input {
   .form-control {
     color: $state-danger-text;
   }
+}
+
+.dropdown-menu.active {
+  display: block;
 }
