--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,7 +2,7 @@
 <h1><%= t(".heading") %></h1>
 <p>
   <%= t(".description_html",
-    link1: link_to(t(".link1"), t(".link1_url")),
-    link2: link_to(content_tag(:em, t(".link2")), t(".link2_url"))
+    link1: link_to(t(".link1"), Settings.links.rails_help, target: "_blank"),
+    link2: link_to(t(".link2"), Settings.links.rails_book, target: "_blank")
   ).html_safe %>
 </p>
