--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -9,18 +9,4 @@
 @import 'avatar';
 @import 'forms';
 @import 'dropdown-menu';
-
-.checkbox {
-  margin-bottom: 10px;
-  margin-top: 10px;
-
-  span {
-    font-weight: normal;
-    margin-left: 20px;
-  }
-}
-
-#session_remember_me {
-  margin-left: 0;
-  width: auto;
-}
+@import 'checkbox';
