--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,15 +6,15 @@
               <li><%= link_to t("navbar.home"), root_path %></li>
               <li><%= link_to t("navbar.help"), help_path %></li>
               <% if logged_in? %>
-                <li><%= link_to t("navbar.account"), "#" %></li>
+                <li><%= link_to t("navbar.account"), current_user %></li>
                 <li class="dropdown">
                   <%= link_to "#", id: "account", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
                     <%= t("navbar.account") %>
                     <b class="caret"></b>
                   <% end %>
                   <ul class="dropdown-menu" id="dropdown-menu">
-                    <li><%= link_to t("navbar.profile"), current_user %></li>
-                    <li><%= link_to t("navbar.settings"), "#" %></li>
+                    <li><%= link_to t("navbar.profile"), edit_user_path(current_user, locale: I18n.locale) %></li>
+                    <li><%= link_to t("navbar.settings"), edit_user_path(current_user, locale: I18n.locale) %></li>
                     <li class="divider"></li>
                     <li> <%= link_to t("navbar.log_out"), logout_path, data: {"turbo-method": :delete} %></li>
                   </ul>
