--- a/app/views/demo_partials/_form.html.erb
+++ b/app/views/demo_partials/_form.html.erb
@@ -1,5 +1,5 @@
-<%= label_tag :zone, t(".form.zone_label") %>
+<%= label_tag :zone, t(".zone_label") %>
 <%= text_field_tag :zone, zone %>
 
-<%= label_tag :date, t(".form.date_label") %>
+<%= label_tag :date, t(".date_label") %>
 <%= date_field_tag :date, date %>
