--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
               <li><%= link_to t("navbar.home"), root_path %></li>
               <li><%= link_to t("navbar.help"), help_path %></li>
               <% if logged_in? %>
+                <li><%= link_to t("navbar.users"), users_path %></li>
                 <li><%= link_to t("navbar.account"), current_user %></li>
                 <li class="dropdown">
                   <%= link_to "#", id: "account", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
