--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Edit user") %>
+<% provide(:title, t(".title")) %>
 <% provide(:button_text, t(".submit")) %>
 
 <h1 class="text-center display-1"><%= t(".title") %></h1>
@@ -8,7 +8,7 @@
     <%= render "form" %>
     <div class="gravatar_edit">
       <%= gravatar_for @user %>
-      <a href="http://gravatar.com/emails" target="_blank">change</a>
+      <a href="http://gravatar.com/emails" target="_blank"><%= t(".change") %></a>
     </div>
   </div>
 </div>
