--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,4 +1,4 @@
-<h1><%= Settings.development.sample_app %></h1>
+<h1><%= Settings.development.app_name %></h1>
 
 <p><%= t("user_mailer.greeting") %> <%= @user.name %>,</p>
 
