--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,21 @@
 <% provide :title, t(".title") %>
 <h1><%= t(".heading") %></h1>
-<p>
-  <%= t(".description_html",
-    link: link_to(t(".link"), Settings.links.rails_home, target: "_blank")
-  ).html_safe %>
-</p>
+
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info"><%= render "shared/user_info" %></section>
+      <section class="micropost_form"><%= render "shared/micropost_form" %></section>
+    </aside>
+    <div class="col-md-8">
+      <h3><%= t(".micropost_feed") %></h3>
+      <%= render "shared/feed" %>
+    </div>
+  </div>
+<% else %>
+  <p>
+    <%= t(".description_html",
+      link: link_to(t(".link"), Settings.links.rails_home, target: "_blank")
+    ).html_safe %>
+  </p>
+<% end %>
