--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,4 +11,16 @@
       </h1>
     </section>
   </aside>
+  <%# Micropost %>
+  <div class="col-md-8">
+    <% if @microposts.any? %>
+      <h3><%= t(".microposts", count: @user.microposts.count) %></h3>
+      
+      <ol class="microposts">
+        <%= render @microposts %>
+      </ol>
+
+      <%== pagy_bootstrap_nav(@page) %>
+    <% end %>
+  </div>
 </div>
