--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,5 +11,5 @@
 @import 'dropdown-menu';
 @import 'checkbox';
 @import 'user_index';
-@import 'micropost'
-
+@import 'micropost';
+@import 'stats';
