--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,6 +13,7 @@
   </aside>
   <%# Micropost %>
   <div class="col-md-8">
+    <%= render "follow_form" if logged_in? %>
     <% if @microposts.any? %>
       <h3><%= t(".microposts", count: @user.microposts.count) %></h3>
       
